CI: no sudo in docker

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,9 @@ jobs:
 
       - name: Fake terraform
         run: |
-          echo '#!/bin/bash' | sudo tee /usr/local/bin/terraform
-          echo 'echo Fake Terraform' | sudo tee -a /usr/local/bin/terraform
-          sudo chmod +x /usr/local/bin/terraform
+          echo '#!/bin/bash' | tee /usr/local/bin/terraform
+          echo 'echo Fake Terraform' | tee -a /usr/local/bin/terraform
+          chmod +x /usr/local/bin/terraform
 
       - name: Test plugin
         uses: asdf-vm/actions/plugin-test@v1
