--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,16 +1,17 @@
 version: 0.1
 cli:
-  version: 1.13.0
+  version: 1.16.2
 lint:
+  disabled:
+    - checkov
+    - trivy
+    - trufflehog
   enabled:
-    - checkov@2.3.359
-    - trivy@0.44.0
-    - trufflehog@3.46.3
-    - actionlint@1.6.25
+    - actionlint@1.6.26
     - git-diff-check
-    - gitleaks@8.17.0
-    - markdownlint@0.35.0
-    - prettier@3.0.1
+    - gitleaks@8.18.0
+    - markdownlint@0.37.0
+    - prettier@3.0.3
     - shellcheck@0.9.0
     - shfmt@3.6.0
     - yamllint@1.32.0
@@ -23,10 +24,10 @@ actions:
 plugins:
   sources:
     - id: trunk
-      ref: v1.1.0
+      ref: v1.2.5
       uri: https://github.com/trunk-io/plugins
 runtimes:
   enabled:
-    - go@1.19.5
+    - go@1.21.0
     - node@18.12.1
     - python@3.10.8
